--- a/SW/LoRaWAN_ADC-bridges.ioc
+++ b/SW/LoRaWAN_ADC-bridges.ioc
@@ -250,8 +250,8 @@ Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L452RETxP
-MxCube.Version=5.2.1
-MxDb.Version=DB.5.0.21
+MxCube.Version=5.4.0
+MxDb.Version=DB.5.0.40
 NVIC.ADC1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -267,6 +267,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
@@ -577,8 +578,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=IoT4Bees-Ctrl.ioc
-ProjectManager.ProjectName=IoT4Bees-Ctrl
+ProjectManager.ProjectFileName=LoRaWAN_ADC-bridges.ioc
+ProjectManager.ProjectName=LoRaWAN_ADC-bridges
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
